--- a/GraphQL/service/.gitignore
+++ b/GraphQL/service/.gitignore
@@ -1,3 +1,34 @@
 # Ignore environment variable files
-.env*
-**/.env
+.env
+.env.local
+.env.*.local
+
+# Keep .env.example as template
+!.env.example
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+*.egg-info/
+dist/
+build/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
