--- a/Auth-Service/Dockerfile
+++ b/Auth-Service/Dockerfile
@@ -2,9 +2,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Instalar dependencias de compilación para bcrypt
+RUN apk add --no-cache python3 make g++
+
 # Instalar dependencias
 COPY package*.json ./
-RUN npm install
+RUN npm install --build-from-source
 
 # Copiar código fuente
 COPY . .
