--- a/GraphQL/service/.env.example
+++ b/GraphQL/service/.env.example
@@ -1,3 +1,15 @@
 API_URL=http://127.0.0.1:3000/chifles
-PORT=8001
+AUTH_SERVICE_URL=http://127.0.0.1:3001/api
+PORT=8000
 DEBUG=true
+
+# Credenciales para auto-login con Auth-Service
+API_LOGIN_EMAIL=admin@chifles.com
+API_LOGIN_PASSWORD=Admin123!
+
+# Token JWT para autenticación con la API REST (opcional, si no se usa auto-login)
+# Si se configura, se usará directamente en lugar de hacer login
+API_TOKEN=
+
+# Secret para firmar/verificar JWT (debe coincidir con Api-Rest y Auth-Service)
+JWT_SECRET="tu secreto jwt aquí"
