--- a/.github/workflows/ci-graphql.yml
+++ b/.github/workflows/ci-graphql.yml
@@ -16,13 +16,13 @@ concurrency:
   group: ci-graphql-${{ github.ref }}
   cancel-in-progress: true
 
-defaults:
-  run:
-    working-directory: ./GraphQL/service
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    # Se define el directorio de trabajo solo para este job
+    defaults:
+      run:
+        working-directory: ./GraphQL/service
 
     steps:
       - name: Checkout
@@ -33,6 +33,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+          # Ruta relativa a la raíz del repo para el cache
           cache-dependency-path: GraphQL/service/requirements.txt
 
       - name: Install dependencies
@@ -54,6 +55,10 @@ jobs:
     needs: build-and-test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    # Se define el directorio de trabajo también para el job de Docker
+    defaults:
+      run:
+        working-directory: ./GraphQL/service
 
     steps:
       - name: Checkout
@@ -65,6 +70,8 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
+          # El contexto debe ser relativo a la raíz si no usas working-directory
+          # o simplemente '.' si ya estás dentro de la carpeta
           context: ./GraphQL/service
           push: false
           tags: sistema-chifles/graphql:${{ github.sha }}
