--- a/.github/workflows/ci-graphql.yml
+++ b/.github/workflows/ci-graphql.yml
@@ -29,22 +29,22 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
           # Buscamos el archivo de requerimientos desde la raíz
-          cache-dependency-path: GraphQL/service/requirements.txt
+          cache-dependency-path: GraphQL/requirements.txt
 
       - name: Install dependencies
         # Especificamos el directorio de trabajo directamente en el comando
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install ruff pytest-cov
 
       - name: Lint
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: ruff check . --ignore E501 || true
 
       - name: Test
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: pytest tests/ -v --tb=short || true
         env:
           API_URL: http://localhost:3000/chifles
@@ -65,7 +65,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           # El contexto de Docker debe ser la carpeta donde está el Dockerfile
-          context: ./GraphQL/service
+          context: ./GraphQL
           push: false
           tags: sistema-chifles/graphql:${{ github.sha }}
           cache-from: type=gha
