--- a/.github/workflows/ci-graphql.yml
+++ b/.github/workflows/ci-graphql.yml
@@ -29,22 +29,22 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
           # La ruta del cache debe ser relativa a la raíz del repositorio
-          cache-dependency-path: GraphQL/service/requirements.txt
+          cache-dependency-path: GraphQL/requirements.txt
 
       - name: Install dependencies
         # Se define el directorio de trabajo explícitamente en el paso
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install ruff pytest-cov
 
       - name: Lint
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: ruff check . --ignore E501 || true
 
       - name: Test
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: pytest tests/ -v --tb=short || true
         env:
           API_URL: http://localhost:3000/chifles
@@ -64,7 +64,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./GraphQL/service
+          context: ./GraphQL
           push: false
           tags: sistema-chifles/graphql:${{ github.sha }}
           cache-from: type=gha
