--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,7 +36,7 @@ updates:
 
   # GraphQL (Python)
   - package-ecosystem: "pip"
-    directory: "/GraphQL/service"
+    directory: "/GraphQL"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -93,7 +93,7 @@ updates:
       - "docker"
 
   - package-ecosystem: "docker"
-    directory: "/GraphQL/service"
+    directory: "/GraphQL"
     schedule:
       interval: "weekly"
     labels:
