--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./GraphQL/service
+          context: ./GraphQL
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/chifles-graphql:latest
