--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -76,7 +76,7 @@ jobs:
         run: npm ci
 
       - name: Instalar dependencias GraphQL
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -138,7 +138,7 @@ jobs:
           WS_SECRET: super_secret_key_123
 
       - name: Iniciar GraphQL
-        working-directory: ./GraphQL/service
+        working-directory: ./GraphQL
         run: |
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
           sleep 3
