--- a/Api-Rest/docker-compose.yml
+++ b/Api-Rest/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   api-rest-sistema:
     build: .
@@ -8,8 +10,8 @@ services:
     env_file:
       - ./.env
     environment:
-      - CHOKIDAR_USEPOLLING=true
-      - CHOKIDAR_INTERVAL=1000
+      CHOKIDAR_USEPOLLING: "true"
+      CHOKIDAR_INTERVAL: "1000"
     depends_on:
       - api-postgres-sistema-chifles
     volumes:
@@ -23,13 +25,11 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin123
-      POSTGRES_DB: sistema-chifles
+      POSTGRES_DB: sistema_chifles   # 👈 sin guiones, importante
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
 
 volumes:
   pgdata:
