--- a/n8n-docker/.env.example
+++ b/n8n-docker/.env.example
@@ -1,10 +1,12 @@
+# Ejemplo de archivo .env para n8n (no contiene secretos reales)
+
 # ===== DATABASE CONFIGURATION (para n8n) =====
 # PostgreSQL local (diferente BD de Api-Rest)
 DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=n8n
-DB_USER=zhali
-DB_PASSWORD=Holaquehace
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
 
 # ===== n8n CONFIGURATION =====
 # Host and Port
@@ -17,7 +19,7 @@ GENERIC_TIMEZONE=America/Argentina/Buenos_Aires
 
 # Credentials (cambiar en producción!)
 N8N_DEFAULT_USER_EMAIL=admin@example.com
-N8N_DEFAULT_USER_PASSWORD=Wuevos123
+N8N_DEFAULT_USER_PASSWORD=changeme
 
 # ===== EXTERNAL SERVICES (integración con Payment Service) =====
 PAYMENT_SERVICE_URL=http://host.docker.internal:3002
@@ -30,10 +32,10 @@ WEBHOOK_URL=http://localhost:5678/
 
 # ===== JWT & SECURITY =====
 # Shared JWT Secret con otros servicios
-JWT_SECRET=chifles_super_secret_jwt_key_2024
+JWT_SECRET=replace_with_a_random_secret
 
 # WebSocket Secret
-WEBSOCKET_SECRET=super_secret_key_123
+WEBSOCKET_SECRET=replace_with_a_random_secret
 
 # ===== LOGGING =====
 LOG_LEVEL=info
