--- a/Api-Rest/docker-compose.yml
+++ b/Api-Rest/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.9"
 
 services:
   api-rest-sistema:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     container_name: api-rest-sistema
-    command: npm run start:dev
     ports:
       - "3000:3000"
     env_file:
@@ -15,7 +16,7 @@ services:
     depends_on:
       - api-postgres-sistema-chifles
     volumes:
-      - ./:/app
+      - .:/app
       - /app/node_modules
     working_dir: /app
 
@@ -25,7 +26,7 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin123
-      POSTGRES_DB: sistema_chifles   # 👈 sin guiones, importante
+      POSTGRES_DB: sistema_chifles
     ports:
       - "5432:5432"
     volumes:
