feat: Implement payment processing and order synchronization
- Added payment functionality to the frontend with Stripe integration.
- Created CheckoutForm component for handling payment submissions.
- Implemented StripeProvider for managing Stripe context.
- Developed ConfirmacionPage to display payment confirmation status.
- Introduced OrderSyncService to update order statuses based on payment events.
- Added StripeWebhookController to handle incoming Stripe webhook events.
- Enhanced PedidosPage with payment button for pending orders.
- Created paymentService for API interactions related to payments.
- Updated UI components to reflect new payment statuses and user feedback.

--- a/Payment-Service/.env.example
+++ b/Payment-Service/.env.example
@@ -7,16 +7,34 @@ PORT=3002
 NODE_ENV=development
 
 # ===========================================
+# Base de Datos PostgreSQL
+# ===========================================
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=admin
+DATABASE_PASSWORD=admin123
+DATABASE_NAME=sistema-chifles
+
+# ===========================================
 # HMAC Security
 # ===========================================
 HMAC_SECRET=payment_hmac_secret_key_2024
 
 # ===========================================
-# Payment Providers (opcional)
+# Stripe Configuration
 # ===========================================
-# Stripe
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+# Obtén tus claves en: https://dashboard.stripe.com/apikeys
+# Usa las claves de TEST para desarrollo (empiezan con pk_test_ y sk_test_)
+
+# Publishable Key (se usa en frontend) - empieza con pk_test_ o pk_live_
+STRIPE_PUBLISHABLE_KEY=pk_test_tu_clave_publica_aqui
+
+# Secret Key (se usa en backend) - empieza con sk_test_ o sk_live_
+STRIPE_SECRET_KEY=sk_test_tu_clave_secreta_aqui
+
+# Webhook Secret - se obtiene al crear un webhook endpoint en Stripe Dashboard
+# O usando Stripe CLI: stripe listen --forward-to localhost:3002/webhooks/stripe
+STRIPE_WEBHOOK_SECRET=whsec_tu_webhook_secret_aqui
 
 # ===========================================
 # Servicios Externos
