--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.9",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.3",
     "@tanstack/react-query": "^5.90.9",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
